# product-feedback-app

backend/: .env  Cargo.toml  database.db
backend/logs/: application-log.log.2025-02-07-21  application-log.log.2025-02-08-03  application-log.log.2025-02-08-20  application-log.log.2025-02-15-18  application-log.log.2025-02-16-18  application-log.log.2025-02-17-00  application-log.log.2025-02-17-01  application-log.log.2025-02-17-03  application-log.log.2025-02-17-04  application-log.log.2025-02-17-05
backend/migrations/: 20250207153424_create-users-table.up.sql  20250207154051_create-sessions-table.up.sql  20250208030836_create-categories-table.up.sql  20250208032128_create-feedbacks-table.up.sql  20250208153246_create-comments-table.up.sql  20250208161019_create-comments-mentions-table.down.sql  20250208161019_create-comments-mentions-table.up.sql  20250215185453_create-profiles-table.down.sql  20250215185453_create-profiles-table.up.sql
backend/src/: api_state.rs  database.rs  environment.rs  logger.rs  main.rs  router.rs  server.rs
backend/src/api_routes/: auth_routes.rs  mod.rs  root_routes.rs
backend/src/controllers/: auth_controller.rs  mod.rs  not_found_controller.rs  root_controller.rs
backend/src/errors/: axum_errors.rs  mod.rs  session_errors.rs  user_errors.rs
backend/src/http/: axum_response.rs  cors.rs  error_response.rs  error_types.rs  mod.rs
backend/src/libs/: cookie.rs  guids.rs  jwt.rs  mod.rs  passwords.rs
backend/src/middlewares/: auth_middleware.rs
backend/src/models/: messages_model.rs  mod.rs  session_model.rs  users_model.rs
backend/src/repositories/: messages_repository.rs  mod.rs  session_repository.rs  users_repository.rs
backend/src/services/: messages_service.rs  mod.rs  session_service.rs  users_service.rs
backend/src/types/: auth_types.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: constants.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/components/: app-water-mark.tsx  category-selector.tsx  feedback-title.tsx  roadmap-visualizer.tsx  system-button.tsx  system-tabs.tsx
(+119 files in other folders)
