[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Dependências para a aplicação web
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }


tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

serde = { version = "1.0.217", features = ["derive"] }
socketioxide = { version = "0.16.1", features = ["tracing", "msgpack"] }

sqlx = { version = "0.8.3", features = [
  "runtime-tokio-native-tls",
  "mysql",
  "macros",
  "chrono",
] }


tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

chrono = { version = "0.4.39", features = ["serde"] }
time = "0.3.37"

uuid = { version = "1.12.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
bcrypt = "0.17.0"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.0"

anyhow = "1.0.95"
once_cell = "1.20.3"
thiserror = "2.0.11"
base64 = "0.22.1"
rand = "0.9.0"
sha2 = "0.10.8"

[dev-dependencies]
# Dependências para testes e desenvolvimento da aplicação
sqlx-cli = { version = "0.8.3", features = ["mysql"] }
